--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,2 +1,10 @@
-<p>This is the partial for view 1.</p>
-<span>{{name}}</span>
+<p>This is book catalog.</p>
+<center>
+<table border="1">
+  <tr ng-controller="BookCtrl">
+    <th width="50%"> Book Name</th><th width="50%"> Author </th>
+    <tr ng-repeat="book in books">
+      <td><a ng-href="#/view3/Id={{book.id}}">{{book.name}}</a></td>
+      <td>{{book.author}}</td>
+    </tr>
+  </table>
