--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,5 +1,46 @@
-<p>This is the partial for view 2.</p>
-<p>
-  Showing of 'interpolate' filter:
-  {{ 'Current version is v%VERSION%.' | interpolate }}
-</p>
+<p>Create Book</p>
+<table>
+  <tr>
+    <td>
+      <label>Book Name :</label>
+    </td>
+    <td>
+      <input type="text" ng-model="name">
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <label>Author :</label>
+    </td>
+    <td>
+      <input type="text" ng-model="author">
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <label>Price :</label>
+    </td>
+    <td>
+      <input type="number" ng-model="price">
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <label>Publication :</label>
+    </td>
+    <td>
+      <input type="text" ng-model="publication">
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <label>TotalPages :</label>
+    </td>
+    <td>
+      <input type="number" ng-model="totalPages">
+    </td>
+  </tr>
+</table>
+<button ng-click="save()">Save</button>
+<br><br>
+<p><span ng-model="status"></span></p>
